@@ -16,5 +16,3 @@ javac -p mods/ -d classes $(find chapter12-m2/src/main/java -name '*.java')
 
 cd classes
 jar --module-version=1.0.a -c -f ../mods/chapter12-m2.jar $(find . -path "*/reader/*") ./module-info.class
-
-jlink --module-path /usr/java/jdk-11.0.2/bin/java/jmods:mods --add-modules chapter12.reflection chapter12.reflection.impl chapter12.reflection.reader --output image
